--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ streamlit = "^1.32.0"
 sqlalchemy = "^2.0.0"
 pydantic = "^2.6.0"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
-python-jose = "^3.3.0"
+python-jose = {extras = ["cryptography"], version = "^3.4.0"}
+python-multipart = "^0.0.20"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
