--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pydantic = "^2.6.0"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 python-multipart = "^0.0.20"
+lark = "^1.2.2"
+bcrypt = ">=4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -22,6 +24,8 @@ coverage = "^7.4.0"
 flake8 = "^7.0.0"
 bandit = "^1.7.6"
 ruff = "^0.4.0"
+pytest-cov = "^6.1.1"
+httpx = "^0.28.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -29,3 +33,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 start-api = "uvicorn backend.app.main:app --reload"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:Please use `import python_multipart` instead."
+]
