--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 python-multipart = "^0.0.20"
 lark = "^1.2.2"
 bcrypt = ">=4.0.1"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
