--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,10 @@ ipython_config.py
 .pdm-python
 .pdm-build/
 
+# Mutmut artifacts
+.mutmut-cache/
+mutants/
+
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
