--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ package-mode = false
 python = "^3.10"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
-streamlit = "^1.32.0"
+streamlit = "^1.45.0"
 sqlalchemy = "^2.0.0"
 pydantic = "^2.6.0"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
@@ -18,6 +18,7 @@ python-multipart = "^0.0.20"
 lark = "^1.2.2"
 bcrypt = ">=4.0.1"
 python-dotenv = "^1.1.0"
+bandit = "^1.8.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -31,7 +32,10 @@ selenium = "^4.31.0"
 locust = "^2.36.2"
 mutmut = "^3.2.3"
 hypothesis = "^6.131.9"
-wfuzz = "^3.1.0"
+
+[tool.bandit]
+exclude_dirs = ["./.venv", "./tests"]
+skips = ["B101"]
 
 [build-system]
 requires = ["poetry-core"]
