Modified CI so now it produces reports as artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,21 @@ jobs:
                             -u 5 -r 2 -t 10s \
                             > reports/locust-output.txt 2>&1
           echo "✅ Locust performance test completed!"
+          - name: Save Ruff, Flake8, and Bandit Outputs
+          run: |
+            mkdir -p reports
+  
+            echo "🔍 Saving Ruff output"
+            poetry run ruff . --quiet > reports/ruff-output.txt
+  
+            echo "🧹 Saving Flake8 output"
+            poetry run flake8 . > reports/flake8-output.txt
+  
+            echo "🔐 Saving Bandit output"
+            poetry run bandit -r backend -ll > reports/bandit-output.txt
+            echo "✅ Outputs saved!"
+
+
 
       - name: Upload Test Artifacts
         uses: actions/upload-artifact@v4
